fix z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -150,7 +150,7 @@
   height: 100vh;
   padding-top: 50px;
   text-align: center;
-  z-index: 1;
+  z-index: 20;
   background-color: #4f4f4f;
   -webkit-transform: translateX(-100%);
   -ms-transform: translateX(-100%);
@@ -307,7 +307,7 @@
 
 .modal--visible {
   opacity: 1;
-  z-index: 10;
+  z-index: 30;
 }
 
 .tabs-wrapper {
