--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -4,7 +4,7 @@
   height: 100vh;
   padding-top: 50px;
   text-align: center;
-  z-index: 1;
+  z-index: 20;
   background-color: #4f4f4f;
   transform: translateX(-100%);
   transition: all 0.5s;
