--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -21,6 +21,7 @@
     background-color: #4f4f4f;
     transform:translate(-50%, -50%) translateX(-200%);
     transition: all 0.5s;
+
     &--visible {
       transform: translate(-50%, -50%);
     }
@@ -74,6 +75,6 @@
 
   &--visible {
     opacity: 1;
-    z-index: 10;
+    z-index: 30;
   }
 }
